# LLM_RAG

./: chatbot.py  ingest.py  pyproject.toml  requirements.txt
chroma_db/: chroma.sqlite3
